--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script async src="../src/components/assets/libs/typed.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+    <!-- <script src="../src/components/assets/libs/typed.min.js"></script> -->
+    <script src="../src/components/assets/libs/script.js"></script>
+
   </body>
 </html>
