добавил роутинги, настроил фетч постов и рендер отдельного артикля, компонент goBack, компонент начального прелоудера,  компонент обертки для рендера html с WP

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
     <!-- <script src="../src/components/assets/libs/typed.min.js"></script> -->
-    <script src="../src/components/assets/libs/script.js"></script>
+    <!-- <script src="../src/components/assets/libs/script.js"></script> -->
 
   </body>
 </html>
